--------------------------
Darshan Release Change Log
--------------------------

darshan-2.1.1
=============
* new darshan-convert command line utility for converting existing log files,
  with optional anonymization and optional bzip2 compression
* bzip2 support in command line utilities (but not in the darshan library
  itself)
* updated log file format that allows for string key/value pairs to be stored
  in the header
* added ability to set MPI-IO hints when writing darshan log
  at configure time: --with-log-hints
  at run time: DARSHAN_LOGHINTS environment variable
* bug fix contributed by Sandra Schröder: use case-insensitive search for MPI
  symbols in Fortran wrapper script
* performance bug fix: remove unecessary call to MPI_File_set_size when
  writing log
* added --with-logpath-by-env configure option to allow absolute 
  log path to be specified via environment variable

darshan-2.1.0
=============
* additinoal environment variables to control log, jobid and
  alignment parameters
* additional configure tests to improve portability
* bug fixes for darshan-parser --perf calucations
* support for MPI1.x
* support for OpenMPI
* support for PGI, Intel compilers
* new libdarshan.so dynamic library for use with LD_PRELOAD

darshan-2.0.2
=============
* added a random identifier to job logs (to avoid collisions from multiple
  application instances within a single scheduler job)
* improved installation and library path management for darshan-job-summary.pl
* improved error handling in darshan-job-summary.pl
* additional derived statistics categories for darshan-parser output:
    --all   : all sub-options are enabled
    --base  : darshan log field data [default]
    --file  : total file counts
    --perf  : derived perf data
    --total : aggregated darshan field data

darshan-2.0.1
=============
* bug fix to variance/minimum calculations on shared files
* switch to automatic generation of all MPI compiler scripts using
  darshan-gen-* tools